--- a/AlwaysForward/AlwaysForward/AlwaysForward.csproj
+++ b/AlwaysForward/AlwaysForward/AlwaysForward.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="MySqlConnector" Version="2.1.13" />
   </ItemGroup>
